# pyright-ratchet

./: LICENSE  README.md  pyproject.toml
pyright_ratchet/: main.py
